<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".ui.goal.GoalFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/goal_back"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/hurray"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginBottom="8dp"
        android:background="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="65dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="40sp"
        android:text="@string/goal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:text="@string/time"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/time_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/best_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:text="@string/best_time"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/best_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="25sp"
        android:text="1"
        app:layout_constraintEnd_toEndOf="@+id/time_value"
        app:layout_constraintStart_toStartOf="@+id/time_value"
        app:layout_constraintTop_toBottomOf="@+id/time_value" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="25sp"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toTopOf="@+id/time" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/menu"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintEnd_toStartOf="@+id/next_match"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/best_time" />

    <Button
        android:id="@+id/next_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/next_match"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>