<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey"
    tools:context=".ui.timeIsUp.TimeIsUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/time_is_up_back"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginBottom="8dp"
        android:background="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="65dp" />


    <TextView
        android:id="@+id/time_is_up_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/time_is_up"
        android:textAllCaps="false"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:text="@string/menu"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintEnd_toStartOf="@+id/rematch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_is_up_text" />

    <Button
        android:id="@+id/rematch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:text="@string/rematch"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="@+id/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>